--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="fcicolor">#9e1460</color>
+    <color name="fontcolor">#fdfffa</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
