--- a/app/src/main/res/layout/activity_publications.xml
+++ b/app/src/main/res/layout/activity_publications.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Lecturers">
+    tools:context=".Publications">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -37,7 +37,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_lecturers" />
+    <include layout="@layout/content_publications" />
 
 
 </android.support.design.widget.CoordinatorLayout>
