--- a/app/src/main/res/layout/content_time_table.xml
+++ b/app/src/main/res/layout/content_time_table.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context=".TimeTable"
+    tools:showIn="@layout/activity_time_table">
+
     <WebView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -17,4 +18,4 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
-</android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.NestedScrollView>
