--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,7 +7,7 @@
         <item
             android:id="@+id/nav_lecturers"
             android:icon="@drawable/ic_lecturer"
-            android:title="Lecturers" />
+            android:title="FCI Staff" />
         <item
             android:id="@+id/nav_timetable"
             android:icon="@drawable/ic_timetable"
@@ -15,23 +15,25 @@
         <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_schedule"
-            android:title="Student's Planner" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Manage your info" />
+            android:title="Student's Todo List" />
     </group>
+    <item android:title="News">
+        <item
+            android:id="@+id/nav_publications"
+            android:icon="@drawable/ic_pub"
+            android:title="FCI recent Publications" />
+    </item>
 
-    <item android:title="Communicate">
+    <item android:title="Social Network">
         <menu>
             <item
                 android:id="@+id/nav_facebook"
                 android:icon="@drawable/ic_facebook"
-                android:title="Twitter" />
+                android:title="Facebook" />
             <item
                 android:id="@+id/nav_twiter"
                 android:icon="@drawable/ic_twitter"
-                android:title="Send" />
+                android:title="Twitter" />
         </menu>
     </item>
 
